// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterType should render as EKS 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 font-medium text-xs h-6 px-2 border rounded border-neutral-250 text-neutral-350 dark:border-neutral-350 dark:text-neutral-300"
      data-accent-color="neutral"
    >
      EKS
    </span>
  </div>
</body>
`;

exports[`ClusterType should render as GCP 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 font-medium text-xs h-6 px-2 border rounded border-neutral-250 text-neutral-350 dark:border-neutral-350 dark:text-neutral-300"
      data-accent-color="neutral"
    >
      GKE (Autopilot)
    </span>
  </div>
</body>
`;

exports[`ClusterType should render as K3S 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 font-medium text-xs h-6 px-2 border rounded border-neutral-250 text-neutral-350 dark:border-neutral-350 dark:text-neutral-300"
      data-accent-color="neutral"
    >
      EC2 (K3S)
    </span>
  </div>
</body>
`;

exports[`ClusterType should render as SCW 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 font-medium text-xs h-6 px-2 border rounded border-neutral-250 text-neutral-350 dark:border-neutral-350 dark:text-neutral-300"
      data-accent-color="neutral"
    >
      Kapsule
    </span>
  </div>
</body>
`;
